# zephyrus

./: Dockerfile  README.md  compose.yml  go.mod  main.go  zephyr.cabal  zephyrus.cabal
.github/workflows/: docker.yml  linter.yml  tests.yml
app/: Main.hs
controller/: controller.go
model/: forecastModel.go  geoModel.go  metricsModel.go  moonModel.go  statisticsModel.go  urls.go  weatherModel.go  windModel.go  windModel_test.go
src/: Controller.hs  Error.hs  Model.hs  Server.hs  Statistics.hs  Types.hs
statistics/: primitives.go  primitives_test.go
test/: ModelTests.hs  StatsTests.hs  Tests.hs
types/: Weather.go  cache.go  city.go  date.go  forecast.go  metrics.go  moon.go  statDB.go  statistics.go  variables.go  weather.go  wind.go
