cabal-version:      3.0
name:               zephyrus
version:            0.1.0.2
synopsis:           HTTP service for weather statistics
homepage:           https://github.com/ceticamarco/zephyrus
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Marco Cetica
maintainer:         email@marcocetica.com
category:           Network
build-type:         Simple

common warnings
    ghc-options: -Wall -Wextra -Werror -O2 -threaded

library zephyrus-lib
    import:            warnings
    exposed-modules:   Server Controller Error Model Statistics Types
    hs-source-dirs:    src
    build-depends:     base >= 4.7 && <5
                      , aeson
                      , containers
                      , text
                      , transformers
                      , stm
                      , servant
                      , servant-server
                      , req
                      , vector
                      , scientific
                      , time
    default-language: Haskell2010

executable zephyrus
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.7 && <5
                      , zephyrus-lib
                      , servant
                      , servant-server
                      , containers
                      , transformers
                      , stm
                      , warp
                      , text
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite zephyrus-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    other-modules:    StatsTests
    hs-source-dirs:   test
    build-depends:     base >= 4.7 && <5
                      , zephyrus-lib
                      , HUnit
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -Werror
    